# ostinato

./: .gitignore  BUILDING.md  CMakeLists.txt  Dockerfile  README.md  ost.pro
.agents/: setup
.github/workflows/: build-linux.yml  build-platforms.yml  build-windows.yml
client/: CMakeLists.txt  ostinato.pro  params.cpp  port.cpp  port.h  portgroup.cpp  portgroup.h
client/core/: client_session.cpp  client_session.h  port_state.cpp  port_state.h
common/: CMakeLists.txt  ipv6addressdelegate.h  ostfile.pro  ostproto.pro  ostprotogui.pro  protocolmanager.cpp  pythonfileformat.cpp  userscript.cpp  userscript.h
common/qtfree/: QFile  QIODevice  QMap  QMultiHash  QMutex  QReadWriteLock  QSettings  QTemporaryFile  QThread  QTimer  QtCoreCompat.h  QtDebug
controller/: main.cpp  stdio_protocol.cpp  stdio_protocol.h
desktop/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts
desktop/electron/: framing.ts  main.ts  preload.ts  schema.ts  security.ts  sidecar.ts  snapshot.ts
desktop/scripts/: dev.mjs  measure-linux.mjs  stage-controller-linux.mjs  verify-package-linux.mjs  write-cjs-package.mjs
desktop/shared/: types.ts
desktop/src/: App.svelte  app.d.ts  styles.css
desktop/src/components/: ConnectionPanel.svelte  PortTable.svelte  VirtualStats.svelte
desktop/src/lib/: stores.ts
desktop/tests/: framing.test.ts  schema.test.ts  security.test.ts  sidecar.test.ts  snapshot.test.ts  stores.test.ts
desktop/tests/e2e/: desktop.spec.ts
extra/: CMakeLists.txt
rpc/: CMakeLists.txt  pbrpc.pro  pbrpc_client_core.cpp  pbrpc_client_core.h  pbrpc_core.cpp  pbrpc_core.h  pbrpc_server_core.cpp  pbrpc_server_core.h  pbrpcchannel.cpp  pbrpccommon.h  rpcconn.cpp  rpcconn.h  sharedprotobufmessage.h  versioncompatibility.cpp  versioncompatibility.h
server/: CMakeLists.txt  abstractport.cpp  devicemanager.cpp  drone.cpp  drone.h  drone.pro  drone_main.cpp  emuldevice.cpp  linuxport.cpp  linuxport.h  linuxutils.cpp  myservice.cpp  params.cpp  pcapport.cpp  pcapport.h  pcaprxstats.cpp  pcaprxstats.h  pcapsession.cpp  pcapsession.h  pcaptransmitter.cpp  pcaptxstats.cpp  pcaptxstats.h  pcaptxthread.cpp  pcaptxthread.h  pcaptxttagstats.cpp  pcaptxttagstats.h  streamtiming.cpp  streamtiming.h
test/: CMakeLists.txt  compatibility_tests.cpp  controller_process_tests.cpp  controller_protocol_tests.cpp  headless_client_drone_tests.cpp  headless_client_e2e_tests.cpp  ostproto_core_tests.cpp  pbrpc_client_core_tests.cpp  pbrpc_core_tests.cpp  pbrpc_server_core_tests.cpp  pbrpc_server_test.proto  test.pro
